--- a/src/AwesomeSolution/AwesomeApp/AwesomeApp.Shared/MainPage.xaml
+++ b/src/AwesomeSolution/AwesomeApp/AwesomeApp.Shared/MainPage.xaml
@@ -1,13 +1,16 @@
-﻿<Page
-    x:Class="AwesomeApp.MainPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:AwesomeApp"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+﻿<Page x:Class="AwesomeApp.MainPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:local="using:AwesomeApp"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-		<TextBlock Text="Hello, world!" Margin="20" FontSize="30" />
+        <TextBlock Text="My awesome app!"
+                   VerticalAlignment="Center"
+                   HorizontalAlignment="Center"
+                   Margin="20"
+                   FontSize="30" />
     </Grid>
 </Page>
